css in the CodingProject component fixed to look good on iPhones in potrait

--- a/src/components/CodingProject/CodingProject.css
+++ b/src/components/CodingProject/CodingProject.css
@@ -27,6 +27,7 @@
 }
     
 .codingProjectCard__title {
+    text-align: left;
     font-size: 36px;
     color: #333;
     font-weight: 600;
@@ -52,4 +53,38 @@
     transition: all 0.3s ease 0s;
     padding: 7.5px 10px;
     width: fit-content;
+}
+
+/* CSS rules for iPhones in portrait orientation */
+@media only screen and (min-width: 320px) and (max-width: 414px) and (orientation: portrait) {
+    .codingProjectCard {
+        flex-direction: column;
+        height: fit-content;
+    }
+
+    .codingProjectCard img {
+        height: 0%;
+    }
+
+    .codingProjectCard__title {
+        text-align: center;
+        font-size: 20px;
+    }
+        
+    .codingProjectCard__description {
+        font-size: 16px;
+        text-align: center;
+    }
+
+    .codingProjectCard__button {
+        align-self: center;
+        font-size: 12px;
+        font-weight: 600;
+    }
+}
+
+ /* iPhone SE */
+@media only screen and (max-width: 320px) and (orientation: portrait) {
+    
+    
 }
